--- a/navigation/choose_classes.html
+++ b/navigation/choose_classes.html
@@ -68,7 +68,7 @@ show_reading_time: false
     z-index: 10; /* Ensures it appears above other content */
   }
 
-  .dropdown-menu.💅🏿show {
+  .dropdown-menu.show {
     display: block;
   }
 
