--- a/navigation/choose_classes.html
+++ b/navigation/choose_classes.html
@@ -8,6 +8,34 @@ show_reading_time: false
 ---
 
 <style>
+
+/* Header Styling */
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: -80px; /* Moves the header higher */
+}
+
+.logo-container {
+  margin-right: 25px;
+}
+
+.logo-container img {
+  height: 110px;
+  width: auto;
+}
+
+h1 {
+  font-size: 3.5rem;
+  color: white;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+
   .content {
     flex-grow: 1;
     background: #222;
@@ -115,8 +143,10 @@ show_reading_time: false
   }
 </style>
 
-<!-- Header with Logo and Title -->
-<div class="header-container" style="text-align: center">
+<div class="header-container">
+  <div class="logo-container">
+    <img src="{{site.baseurl}}/navigation/images/neptune.png" alt="Logo" />
+  </div>
   <h1>Choose Your Classes</h1>
 </div>
 
