--- a/navigation/classcrud.html
+++ b/navigation/classcrud.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Classes
+title: 
 permalink: /classcrud/
 menu: nav/home.html
 search_exclude: true
@@ -8,6 +8,33 @@ show_reading_time: false
 ---
 
 <style>
+
+    /* Header Styling */
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: -80px; /* Moves the header higher */
+}
+
+.logo-container {
+  margin-right: 25px;
+}
+
+.logo-container img {
+  height: 110px;
+  width: auto;
+}
+
+h1 {
+  font-size: 3.5rem;
+  color: white;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
     table {
         width: 100%;
         border-collapse: collapse;
@@ -37,7 +64,12 @@ show_reading_time: false
     .btn-delete { background-color: #d9534f; }
 </style>
 
-<h2>Manage Classes</h2>
+<div class="header-container">
+    <div class="logo-container">
+      <img src="{{site.baseurl}}/navigation/images/neptune.png" alt="Logo" />
+    </div>
+    <h1>Manage Classes</h1>
+  </div>
 
 <input type="text" id="pickInput" placeholder="Enter class pick">
 <button class="btn btn-add" onclick="createClass()">Add Class</button>
@@ -91,23 +123,35 @@ show_reading_time: false
         const newPick = prompt("Enter new pick:", pickCell.textContent);
         if (!newPick) return;
 
-        await fetch(`${pythonURI}/api/class/add`, {
-            method: "PUT",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ id: id, pick: newPick }),
-        });
+        try {
+            const res = await fetch(`${pythonURI}/api/class/add`, {
+                method: "PUT",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ id: id, pick: newPick }),
+                credentials: "include",
+            });
 
-        pickCell.textContent = newPick;
+            if (!res.ok) throw new Error("Failed to update class");
+            pickCell.textContent = newPick;
+        } catch (err) {
+            console.error("Error:", err);
+        }
     };
 
     window.deleteClass = async function (id) {
-        await fetch(`${pythonURI}/api/class/add`, {
-            method: "DELETE",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ id: id }),
-        });
+        try {
+            const res = await fetch(`${pythonURI}/api/class/add`, {
+                method: "DELETE",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ id: id }),
+                credentials: "include",
+            });
 
-        document.querySelector(`[data-id="${id}"]`).remove();
+            if (!res.ok) throw new Error("Failed to delete class");
+            document.querySelector(`[data-id="${id}"]`).remove();
+        } catch (err) {
+            console.error("Error:", err);
+        }
     };
 
     window.displayClass = function (classData) {
@@ -126,7 +170,16 @@ show_reading_time: false
         tableBody.appendChild(row);
     };
 
+    // Define fetchOptions before using it
+    const fetchOptions = {
+        method: "GET",
+        headers: { "Content-Type": "application/json" },
+        credentials: "include",
+    };
+
     fetch(`${pythonURI}/api/class/add`, fetchOptions)
         .then((res) => res.json())
-        .then((classes) => classes.forEach(displayClass));
+        .then((classes) => classes.forEach(displayClass))
+        .catch((err) => console.error("Error fetching classes:", err));
 </script>
+
