--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ show_reading_time: false
 
     <button
       id="side2"
-      onclick="window.location.href='/neptune_frontend/astronet'"
+      onclick="window.location.href='/neptune_frontend/flashcards'"
       class="side-btn"
     >
-      View AstroNet
+      View Flashcards
     </button>
   </section>
 
