--- a/navigation/posts.html
+++ b/navigation/posts.html
@@ -1,8 +1,11 @@
 ---
-layout: base
-title: Posts
+layout: post
+title: The Chat
 search_exclude: true
+menu: nav/home.html
 permalink: /posts/
+search_exclude: true
+show_reading_time: false
 ---
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.min.js"></script>
